--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -6,6 +6,7 @@
     <item name="colorPrimary" type="color">#FF8B34</item>
     <item name="colorPrimaryDark" type="color">#BB4834</item>
 
+    <item name="black" type="color">#000000</item>
     <item name="red" type="color">#FF4D07</item>
     <item name="orange" type="color">#FFA538</item>
     <item name="white" type="color">#FFFFFF</item>
