--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -6,16 +7,19 @@
     <!-- TOOLBAR -->
     <include layout="@layout/toolbar" />
 
-    <!-- STATUS TEXT VIEW -->
-    <TextView
-        android:id="@+id/id_text_view"
-        android:layout_width="match_parent"
+    <!-- PAGE INDICATOR -->
+    <com.viewpagerindicator.CirclePageIndicator
+        android:id="@+id/id_page_indicator"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:padding="10dp"
-        android:textSize="24dp"
-        android:textStyle="bold" />
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:padding="5dp"
+        app:fillColor="@color/accent"
+        app:pageColor="@color/colorPrimary"
+        app:radius="8dp"
+        app:strokeColor="@color/accent_dark"
+        app:strokeWidth="1dp" />
 
     <!-- VIEW PAGER -->
     <android.support.v4.view.ViewPager
