AllAdapter now inflating images.

--- a/app/src/main/res/layout/adapter_all.xml
+++ b/app/src/main/res/layout/adapter_all.xml
@@ -29,8 +29,14 @@
         android:id="@+id/id_adapter_all_data_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:padding="10dp"
         android:text="@string/adapter_data"
         android:textSize="18dp" />
+
+    <ImageView
+        android:id="@+id/id_adapter_all_data_image_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:padding="10dp" />
 </LinearLayout>
