--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,23 +7,18 @@
     <!-- TOOLBAR -->
     <include layout="@layout/toolbar" />
 
-    <!-- PAGE INDICATOR -->
-    <com.viewpagerindicator.CirclePageIndicator
-        android:id="@+id/id_page_indicator"
-        android:layout_width="wrap_content"
+    <!-- SLIDING TAB LAYOUT -->
+    <com.example.rodrigo.fuzz.view.SlidingTabLayout
+        android:id="@+id/id_sliding_tab_layout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:padding="5dp"
-        app:fillColor="@color/accent"
-        app:pageColor="@color/colorPrimary"
-        app:radius="8dp"
-        app:strokeColor="@color/accent_dark"
-        app:strokeWidth="1dp" />
+        android:elevation="2dp"
+        android:background="@color/accent"/>
 
     <!-- VIEW PAGER -->
     <android.support.v4.view.ViewPager
         android:id="@+id/id_view_pager"
+        android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_weight="1" />
 </LinearLayout>
