--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <item name="accent" type="color">#FF4D07</item>
+    <item name="accent" type="color">#FEFF6E0F</item>
     <item name="accent_dark" type="color">#CC4D07</item>
 
-    <item name="colorPrimary" type="color">#FF8B34</item>
-    <item name="colorPrimaryDark" type="color">#BB4834</item>
+    <item name="colorPrimary" type="color">#ffff951b</item>
+    <item name="colorPrimaryDark" type="color">#FF4D07</item>
 
     <item name="black" type="color">#000000</item>
     <item name="red" type="color">#FF4D07</item>
